@@ -9,7 +9,7 @@ Version 2.19.1
 
 * The following bugs are resolved with this release:
 
-  16545, 16623, 16885, 16916, 16943, 16958.
+  16545, 16623, 16882, 16885, 16916, 16943, 16958.
 
 
 Version 2.19
